@@ -11,6 +11,7 @@ Date: ????
     - Fixed white drop highlight being drawn above green drop highlight
     - Fixed error when loading save where an actively-being-adjusted-inserter's prototype was removed
     - Fixed error with inserters with 0 length pickup or drop vectors
+    - Fixed error in prototype stage when one of pickup or drop position uses xy and the other uses an array
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.3
 Date: 2024-02-01
